[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptotools"
version = "0.1"
description = "Zero dependency implementation of common cryptographic functions for working with cryptocurrency."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Mike Dallas", email = ""}
]
urls = { "Homepage" = "https://github.com/directedbit/cryptotools" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptotools", "cryptotools.*"]

[tool.setuptools.package-data]
cryptotools = ["BTC/HD/wordlist.txt"] 